<resources>
    <string name="app_name">CalorieCounter</string>
    <string name="beef_patty">Beef</string>
    <string name="lamb_patty">Lamb</string>
    <string name="ostrich_patty">Ostrich</string>
    <string name="cheddar">Asiago Cheese</string>
    <string name="provolone">Creme Fraiche</string>
    <string name="sauce">Caviar Sauce up to one teaspoon</string>
    <string name="proscuitto">Proscuitto</string>
    <string name="calories">Calories?</string>
</resources>